# c4.5-learning

./: LICENSE  README.md  pyproject.toml
c45/: __init__.py  bag_of_words.py
tests/: test_c45.py
