[tool.poetry]
name = "c45"
version = "0.0.1"
description = "A POC C4.5 implementation for use in pangea's data guard service"
authors = ["Michael Combs <michael.combs@pangea.cloud>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pandas = "^2.2.3"
pyarrow = "^17.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
